--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,10 +13,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/api/auth/login">Login</a>
+                    <a class="nav-link" href="/">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/api/auth/register">Register</a>
+                    <a class="nav-link" href="/register">Register</a>
                 </li>
             </ul>
 
@@ -31,7 +31,7 @@
                 <div class="card">
                     <div class="card-header">Register</div>
                     <div class="card-body">
-                        <form action="/api/auth/register" method="post">
+                        <form action="/register" method="post">
 
 
                             <div class="form-group row">
